Sidebar alignment fix

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -12,8 +12,6 @@
     height: 200px;
     width: 325px;
     text-indent: -9999px;
-    margin-left: -10px;
-    margin-top: 10px;
   }
   
   // Theme Switcher
